# nonebot-plugin-ai-turtle-soup

./: .env.example  LICENSE  README.md  pyproject.toml  requirements.txt
src/nonebot_plugin_ai_turtle_soup/: __init__.py  config.py  game_manager.py
src/nonebot_plugin_ai_turtle_soup/prompts/: gaming.md  generate.md  progress.md  rate.md
